# FidesTest

./: README.md
fides_grep/: CHANGELOG  LICENSE  README.md  analyzer.py  config.battery_ali.toml  config.battery_in_text_buy_and_inst.toml  config.flowers_in_text_buy_and_inst.toml  config.toml  config_loader.py  main.py  pyproject.toml
fides_grep/in/: 10 high street_24-Jan_16.csv  10 high_24-Jan_16.csv  10 hikes_24-Jan_16.csv  10 hills_24-Jan_16.csv  10 hindi_24-Jan_16.csv  10 hit movies_24-Jan_16.csv  10 sek to aud_24-Jan_16.csv  10 sms d'amour_24-Jan_16.csv  100 volt battery_24-Jan_15..weights  100 volt battery_24-Jan_15.csv  100 volt dc power supply_24-Jan_15.csv  100 volt plug_24-Jan_15.csv  100 volt power supply_24-Jan_15.csv  100 volt snow joe battery_24-Jan_15.csv  100 volt solar panel_24-Jan_15.csv  100 volt to 120 volt converter_24-Jan_15.csv  100 volt_24-Jan_15.csv  10101 code_24-Jan_15.csv  10101 converter_24-Jan_15.csv  10101 translator_24-Jan_15.csv  10140 alexander ave_24-Jan_15.csv  10140 campus point drive_24-Jan_15.csv  10140 providence church lane_24-Jan_15.csv  10140 se division st_24-Jan_15.csv  10140 tivoli_24-Jan_16.csv  10140 w 44th ave_24-Jan_15.csv  10140 w colfax ave_24-Jan_15.csv  10140 w flamingo rd_24-Jan_16.csv  10hi sa80 abc_24-Jan_16.csv  10k2 thermistor table_24-Jan_15.csv  10k2+21k+9= 00_24-Jan_15.csv  10k2+21k+9=0_24-Jan_15.csv  10k2+9k-1=0_24-Jan_16.csv  10k258_24-Jan_15.csv  10k27 mechanical seal_24-Jan_16.csv  10k271 varistor_24-Jan_15.csv  10k27_24-Jan_15.csv  10sek in gbp_24-Jan_16.csv  10sek to eur_24-Jan_16.csv  (+60 more)
(+18 files in other folders)
